# ec_master_test

./: .gitignore  CMakeLists.txt  coman_config.yaml  config.yaml  documentation.doxygen  firm_update.cpp  ft_ati_test.cpp  ft_plot.m  ft_plot2.m  nrt_config.yaml  plot_motor.sh  plot_rtt.sh  walkman_test.cpp  walkman_test_2.cpp
basic/: CMakeLists.txt  basic_test.cpp  ec_boards_basic.cpp
basic/include/: ec_boards_basic.h
cmake/: FindPackageHandleStandardArgs.cmake  FindXenomai.cmake  MacroOptionalBuild.cmake
coman_walk/: CMakeLists.txt  ec_boards_walk.cpp  main_walk.cpp
coman_walk/include/: ec_boards_walk.h
configs/: 14-06-16_WKM_LeftFootCalibMatrix.txt  14-06-16_WKM_RightFootCalibMatrix.txt  Disney Coman motor parameters.xlsx  ati_calib_config.yaml  calib_matrix_sens_set2_left_foot_walkman_Dec_12_2016.txt  centauro_config.yaml  centauro_update.yaml  centauro_urdf.yaml  cogimon_config.yaml  cogimon_poses.yaml  coman_config.yaml  coman_fw_update.yaml  config.yaml  config_fw_update.yaml  foot_board_config.yaml  lxm32i_config.yaml  microCTRL_config.yaml  new_fw_update.yaml  nrt_config.yaml  test_poses.yaml  walkimon_config.yaml  walkimon_poses.yaml  walkman_config.yaml  walkman_poses.yaml  walkman_urdf.yaml
examples/ati/: ati_iface.cpp  ati_iface.h  ft_ati_test.cpp
examples/ati_ft6_calib/: CMakeLists.txt  ati_iface.cpp  cent_ft_81.txt  ec_boards_ft_ati.cpp  ft_ati_test.cpp  sensor1_calib.txt  sensor2_calib.txt
examples/basic/: CMakeLists.txt  basic_test.cpp  ec_boards_basic.cpp
examples/centAC_impedance/: CMakeLists.txt  centAC_impedance.cpp  ec_boards_centAC_impedance.cpp
examples/centAC_test/: CMakeLists.txt  centAC_test.cpp  ec_boards_centAC_test.cpp
examples/centAC_urdf/: CMakeLists.txt  centAC_urdf.cpp  ec_boards_centAC_urdf.cpp
examples/centAC_urdf/include/: ec_boards_centAC_urdf.h
examples/coman_V_loop/: CMakeLists.txt  coman_V_loop.cpp  ec_boards_coman_V_loop.cpp
examples/coman_impedance/: CMakeLists.txt  coman_impedance.cpp  ec_boards_coman_impedance.cpp
examples/coman_test/: CMakeLists.txt  coman_test.cpp  ec_boards_coman_test.cpp
examples/coman_torque/: CMakeLists.txt  coman_torque.cpp  ec_boards_coman_torque.cpp
examples/coman_walk/: CMakeLists.txt  GlobalExt.cpp  Matrix.cpp  RTControl.cpp  Stabilizer.cpp  TestJoint.cpp  ec_boards_walk.cpp  main_walk.cpp
examples/coman_walk/include/: GlobalExt.h  Matrix.h  RTControl.h  ec_boards_walk.h
examples/ecat_states/: CMakeLists.txt  LXM32i_plot.m  ec_ecat_states.cpp  ecat_states.cpp  test_b.txt  test_c.txt  test_trj.txt
examples/flash_utils/: CMakeLists.txt  flash_utils.cpp
examples/fw_update/: CMakeLists.txt  fw_update.cpp
examples/hand_test/: CMakeLists.txt  ec_boards_hand.cpp  hand_test.cpp
examples/impedance_trj_test/: CMakeLists.txt  ec_boards_impedance_test.cpp  impedance_test.cpp
examples/joint_joy/: CMakeLists.txt  ec_boards_joint_joy.cpp  joint_joy_test.cpp
examples/joy_forward/: .sconsign.dblite  CMakeLists.txt  SConscript  js_thread.cpp
examples/sine_joint/: CMakeLists.txt  ec_boards_sine.cpp  sine_test.cpp
examples/sine_joint/include/: ec_boards_sine.h
examples/soem_test/: CMakeLists.txt  soem_test.cpp
examples/spnav_forward/: .js_thread.cpp.kate-swp  .sconsign.dblite  CMakeLists.txt  SConscript
examples/urdf_test/: CMakeLists.txt  ec_boards_urdf_test.cpp  urdf_test.cpp
examples/urdf_test/include/: ec_boards_urdf_test.h
examples/walkman_test/: CMakeLists.txt  ec_boards_walkman_test.cpp  (+1 more)
include/: ati_iface.h  json_serialization.hpp  types.h
joint_joy/: CMakeLists.txt  config.yaml  ec_boards_joint_joy.cpp  joint_joy_test.cpp
joint_joy/include/: ec_boards_joint_joy.h
joy_forward/: CMakeLists.txt  js_console  js_thread.cpp
joy_forword/: .sconsign.dblite  js_thread.cpp
other_bin/lpms_forward/: CMakeLists.txt  lpms_forward.cpp
other_bin/motor_calibration/gui/: CMakeLists.txt
other_bin/motor_calibration/gui/include/: calibgui.h
other_bin/motor_calibration/gui/qml/: main.qml
other_bin/motor_calibration/gui/src/: calibgui.cpp  mainCalib_gui.cpp
other_bin/motor_calibration/server/: CMakeLists.txt
other_bin/motor_calibration/server/include/: ati_iface.h  calibrationcontroller.h  ec_board_calib.h
other_bin/motor_calibration/server/src/: ati_iface.cpp  calibrationcontroller.cpp  ec_board_calib.cpp  mainCalib.cpp  testati.cpp
other_bin/spline_test/: CMakeLists.txt  spline_test.cpp
other_bin/spnav_forward/: CMakeLists.txt  spnav_thread.cpp
other_bin/xddp_proto/: .rt_spline_test.cpp.kate-swp  CMakeLists.txt  xddp_proto_test.cpp
other_bin/zmq_pub/: CMakeLists.txt  zmq_pub_thread.cpp
protobuf/: CMakeLists.txt  __CMakeLists.txt  coman_power_pdo.proto  dummy.proto  ec_boards_base_input.proto  ecat_pdo.proto  foot_sens_pdo.proto  ft6_pdo.proto  motor_pdo.proto  power_pack_pdo.proto  repl_cmd.proto
scripts/: run_valgrind.sh  set_cap.sh  xddp_input.py  xddp_term.py
shared_src/: CMakeLists.txt  ati_iface.cpp  coman_robot_id.h  ec_boards_base.cpp  ec_boards_base.h  nrt_thread.cpp  repl_loop.cpp  rt_ipc.cpp  rt_thread.cpp  spline.cpp  test_common.cpp  walkman_robot_id.h  wrap_thread.cpp  zmq_pub_th.cpp  zmq_publisher.cpp
shared_src/include/: zmq_publisher.h
shared_src/include/iit/advr/: ati_iface.h  centauro_robot_id.h  cogimon_robot_id.h  coman_robot_id.h  ec_boards_base.h  input_dev.h  pipes.h  pos_spline.h  rt_ipc.h  spline.h  thread_util.h  trajectory.h  walkman_robot_id.h  zmq_pub_th.h  zmq_publisher.h  zmq_rep_th.h
sine_joint/: CMakeLists.txt  ec_boards_sine.cpp
sine_joint/include/: ec_boards_sine.h
spnav_forward/: spnav_thread.cpp
src/: ati_iface.cpp  ec_boards_iface.cpp  foot_sensor_esc.cpp  ft6_esc.cpp  mc_centAC_esc.cpp  mc_hipwr_esc.cpp  mc_hipwr_iface.cpp  mc_lowpwr_esc.cpp  mc_lowpwr_sph_esc.cpp  mc_lowpwr_sphbrk_esc.cpp  power_board.cpp  power_coman_board.cpp  rt_ipc.cpp  test_esc.cpp  types.cpp
test/: coman_sine_joint.cpp  ft_ati_test.cpp  simple_test.cpp  sine_joint.cpp  test_common.cpp  walkman_test.cpp  walkman_test_2.cpp  walkman_test_3.cpp  zero.cpp  zpub.cpp
yaml_esc/: c_gen.py  motor_xt.yaml  test.yaml
(+54 files in other folders)
